material-overrides/assets/stylesheets/polkadot.css
/* ... */
@media screen and (max-width: 768px) {
  /* To account for the non-anchored footer */
  .md-main {
    padding-bottom: 0;
  }
}

@media screen and (max-width: 640px) {
  .policy-links {
    gap: var(--py-2);
    flex-wrap: wrap;
    justify-content: center;
  }
}

/* --- Admonitions --- */
.md-typeset .admonition,
.md-typeset details {
  background-color: var(--transparent);
  color: var(--color-text-secondary);
  border-radius: var(--rounded);
}

.md-typeset details:not([open]) > summary {
  border-radius: var(--rounded);
}

/* Child admonition */
details.child summary::before {
  display: none;
}

details.child {
  width: fit-content;
}

[dir="ltr"] .md-typeset details.child summary {
  width: fit-content;
  padding-left: 1em;
}

[dir="ltr"] .md-typeset details.child[open] {
  width: 100%;
}

.md-typeset details.child summary {
  background-color: unset;
}

.md-typeset details.child {
  width: fit-content;
  border: 1px solid var(--color-border-strong);
  box-shadow: none;
}

/* Code admonition */
.md-typeset .admonition.code,
.md-typeset details.code {
  border-color: var(--code-admo-border-color);
}

.md-typeset .code > .admonition-title,
.md-typeset .code > summary {
  background-color: var(--code-admo-title-bg);
}

.md-typeset .code > .admonition-title::before,
.md-typeset .code > summary::before {
  background-color: var(--code-admo-border-color);
  -webkit-mask-image: var(--md-admonition-icon--code);
  mask-image: var(--md-admonition-icon--code);
}

/* Interface admonition */
details.interface > summary::before {
  display: none;
}

.md-typeset details.interface {
  border: 1px solid var(--color-border-strong);
  box-shadow: none;
}

[dir="ltr"] .md-typeset details.interface > summary {
  padding: 1em 0 1em 1em;
  background-color: var(--color-surface-secondary);
  border-top-left-radius: var(--rounded);
  border-top-right-radius: var(--rounded);
}

.md-typeset details.interface > summary:after {
  top: auto;
}

.md-typeset details.interface {
  width: 100%;
}

/* --- Banner --- */
.md-banner {
  background-color: var(--color-surface);
  border-bottom: 1px solid var(--color-border-strong);
  text-align: center;
}

.md-banner__inner.md-typeset a {
  text-decoration: underline;
}

.md-banner .md-icon svg.close {
  height: unset;
  width: 0.6rem;
  padding: 0.25rem 0;
}

/* --- Buttons --- */
.md-typeset .md-button {
  background-color: var(--md-default-fg-color);
  color: var(--md-default-bg-color);
  border: none;
  border-radius: var(--rounded-xl);
  display: inline-flex;
  align-items: center;
  gap: var(--py-2);
  padding: var(--py-4) var(--py-8);
  transition-property: background-color;
  transition-duration: 200ms;
}

.md-typeset .md-button:hover,
.md-typeset .md-button:focus {
  background-color: var(--md-default-fg-color);
  color: var(--md-default-bg-color);
  opacity: 0.8;
}

.md-typeset .button-wrapper a.md-button {
  text-decoration: none;
}

.md-content__inner.md-typeset > .button-wrapper {
  display: flex;
  justify-content: center;
}

/* Disabled buttons */
.md-typeset .md-button.disabled-button,
.md-typeset .md-button.disabled-button:hover,
.md-typeset .md-button.disabled-button:focus {
  background-color: var(--md-default-fg-color);
  color: var(--md-default-bg-color);
  cursor: default;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  opacity: 0.7;
}

/* MetaMask connect buttons */
.md-typeset .button-wrapper:has(> a.md-button.connect-metamask) {
  flex-wrap: wrap;
  align-items: center;
  gap: var(--p-2);
}

.md-typeset .button-wrapper > a.md-button.connect-metamask {
  text-align: center;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  padding: var(--py-4);
}

@media screen and (max-width: 1036px) {
  .md-typeset .button-wrapper:has(> a.md-button.connect-metamask) {
    flex-direction: column;
  }

  .md-typeset .button-wrapper > a.md-button.connect-metamask {
    width: 100%;
    max-width: 320px;
  }
}

/* --- Back to top ---*/
.md-top {
  background-color: var(--color-surface);
  color: var(--color-text-primary);
  border: 1px solid var(--color-border-strong);
  top: auto !important;
  bottom: 4rem;
}

.md-top:focus,
.md-top:hover {
  background-color: var(--color-surface-secondary);
  color: var(--color-text-primary);
}

/* These breakpoints align with the footer breakpoints */
@media screen and (max-width: 1148px) {
  /* Layout adjustments for anchoring footer to bottom */
  .md-top {
    bottom: 4.5rem;
  }
}

@media screen and (max-width: 849px) {
  /* Layout adjustments for anchoring footer to bottom */
  .md-top {
    bottom: 7rem;
  }
}

@media screen and (max-width: 767px) {
  /* To account for the non-anchored footer, reset the back to top button */
  .md-top {
    bottom: 1.25rem;
  }
}

/* --- Badges --- */
span.badge {
  border-radius: var(--rounded-full);
  font-size: 0.8em;
  padding: 0.2em 0.5em;
  white-space: nowrap;
  background-color: var(--color-surface-secondary);
  color: var(--color-text-secondary);
  border: 1px solid var(--color-border-strong);
}

/* On content pages */
.md-typeset > span.badge {
  display: inline-block;
}

/* In cards */
.grid.cards span.badge {
  margin-right: 0.5em;
}

/* --- GitHub status badges --- */
.status-badge > p:first-child {
  display: flex;
  flex-direction: column;
  padding-top: var(--p-3);
  margin: 0;
  gap: var(--p-1)
}

.status-badge a > img {
  border-radius: var(--rounded);
}

a.tests-button {
  width: fit-content;
  padding: var(--p-1) var(--p-2);
  font-size: 14px;
  text-decoration: none;
  border-radius: var(--rounded);
  border: 1px solid var(--color-border-strong);
  background: var(--color-surface-secondary);
  color: var(--md-default-fg-color);
  display: flex;
  gap: var(--p-1);
  align-items: center;
}

/* --- Cards --- */
.md-typeset .grid.cards {
  gap: var(--py-3);
}
/* ... */

